--- a/src/getting-started.mdx
+++ b/src/getting-started.mdx
@@ -9,6 +9,8 @@ route: /
 
 様々なシステムを開発するときに利用できるように、HTMLからはCSSフレームワークとして、ReactアプリケーションからはReactコンポーネントライブラリとして使えるように設計されています。
 
+開発については[こちら](/dev)を参照してください。
+
 ## インストール
 
 npmコマンドでGithubリポジトリからインストールしてください。事前にNode.jsをインストールしておく必要があります。
