append number to Tab

--- a/src/components/Tab/Tab.mdx
+++ b/src/components/Tab/Tab.mdx
@@ -21,7 +21,18 @@ import { Tab } from "./Tab"
   <div className="pl-tab-group">
     <a className="pl-tab is-active" href="#">企業概要</a>
     <a className="pl-tab" href="#">ストーリー</a>
-    <a className="pl-tab" href="#">投資先</a>
+    <a className="pl-tab" href="#">
+      投資先
+      <span className="pl-tab-count">
+        87
+      </span>
+    </a>
+    <a className="pl-tab" href="#">
+      スタートアップ投資
+      <span className="pl-tab-count">
+        1,023
+      </span>
+    </a>
   </div>
 </Playground>
 
@@ -33,7 +44,12 @@ import { Tab } from "./Tab"
 <Playground>
   <Tab.Group>
     <Tab as="a" href="#">企業概要</Tab>
-    <Tab as="a" href="#" active>ストーリー</Tab>
-    <Tab as="a" href="#">投資先</Tab>
+    <Tab as="a" href="#">ストーリー</Tab>
+    <Tab as="a" href="#" count={87}>
+      投資先
+    </Tab>
+    <Tab as="a" href="#" count={1023} active>
+      スタートアップ投資
+    </Tab>
   </Tab.Group>
 </Playground>
