--- a/src/components/Tab/Tab.mdx
+++ b/src/components/Tab/Tab.mdx
@@ -16,6 +16,7 @@ import { Tab } from "./Tab"
 
 `pl-tab-group`で`pl-tab`のリストを囲みます。
 `is-active`クラスで現在表示されているコンテンツを示します。
+タブに数値を表示する場合は`count`propsに指定します。
 
 <Playground>
   <div className="pl-tab-group">
@@ -40,6 +41,7 @@ import { Tab } from "./Tab"
 
 `Tab.Group`で`Tab`コンポーネントのリストを囲みます。
 `active`propsで現在表示されているコンテンツを指定します。
+タブに数値を表示する場合は`count`propsに指定します。
 
 <Playground>
   <Tab.Group>
