display count unless 0

--- a/src/components/Tab/Tab.mdx
+++ b/src/components/Tab/Tab.mdx
@@ -53,5 +53,8 @@ import { Tab } from "./Tab"
     <Tab as="a" href="#" count={1023} active>
       スタートアップ投資
     </Tab>
+    <Tab as="a" href="#" count={0} active>
+      LP投資
+    </Tab>
   </Tab.Group>
 </Playground>
