--- a/src/components/Tab/Tab.mdx
+++ b/src/components/Tab/Tab.mdx
@@ -54,7 +54,7 @@ import { Tab } from "./Tab"
     <Tab as="a" href="#" count={1023} active>
       スタートアップ投資
     </Tab>
-    <Tab as="a" href="#" count={0} active>
+    <Tab as="a" href="#" count={0}>
       LP投資
     </Tab>
   </Tab.Group>
