Refine pagination style

--- a/src/components/Pagination/Pagination.mdx
+++ b/src/components/Pagination/Pagination.mdx
@@ -24,23 +24,23 @@ import { Pagination } from "./Pagination"
 
 <Playground>
   <div className='pl-pagination'>
-    <a href='#' className='pl-pagination-previous is-disabled'>
+    <span className='pl-pagination-previous is-disabled'>
       <i className="ri-arrow-left-s-line" />
-    </a>
+    </span>
     <ul className='pl-pagination-list'>
       <li className='pl-pagination-item is-active'>
-        <a>
+        <a href='#'>
           1
         </a>
       </li>
       <li className='pl-pagination-item'>
-        <a>
+        <a href='#'>
           2
         </a>
       </li>
       <span className='pl-pagination-ellipsis'>&hellip;</span>
       <li className='pl-pagination-item'>
-        <a>
+        <a href='#'>
           5
         </a>
       </li>
