--- a/src/components/Pagination/Pagination.mdx
+++ b/src/components/Pagination/Pagination.mdx
@@ -23,7 +23,7 @@ import { Pagination } from "./Pagination"
 
 ---
 
-`pl-pagination-item`の直下に`a` / `div` / `span`などの要素を配置してください
+`pl-pagination-item`の直下に`a`タグを配置してください
 
 <Playground>
   <div className='pl-pagination'>
@@ -70,7 +70,7 @@ import { Pagination } from "./Pagination"
 
 ---
 
-`Pagination.Item`の直下に`a` / `div` / `span`などの要素を配置してください
+`Pagination.Item`の直下に`a`タグを配置してください
 
 <Playground>
   <Pagination>
