--- a/src/components/Tooltip/Tooltip.mdx
+++ b/src/components/Tooltip/Tooltip.mdx
@@ -16,13 +16,13 @@ import { Centered } from '../../doc-components/Centered'
 
 ## CSS
 
-`pl-tooltip`クラスを使います。ツールチップを表示するDOM要素（典型的にはアイコン）を囲みます。
-アクセシビリティを考慮し、ツールチップのテキストは（スクリーンリーダーなどでも有効な）`aria-label`に対して設定します （Githubのデザインシステムである[Primer](https://primer.style/css/components/tooltips)を参考にしています。）
+`pl-tooltip`クラスを使います。
 
 <Playground>
     <Centered>
-        <span className="pl-tooltip" aria-label="こんにちは！">
-            <i className="ri-question-fill" />
+        <span className="pl-tooltip">
+            こんばんは
+            <span className="box top">こんにちは！</span>
         </span>
     </Centered>
 </Playground>
@@ -31,9 +31,11 @@ import { Centered } from '../../doc-components/Centered'
 
 `Tooltip`コンポーネントでツールチップを表示するコンポーネントを囲みます。
 `label`propsに表示するテキストを渡します。
+`place`propsに表示する位置を渡します。
+`long`propsは長い文章を表示する場合にtrueを渡します。
 
 <Playground>
-    <Tooltip label="なんと！たからばこはミミックだった！">
+    <Tooltip label="なんと！たからばこはミミックだった！" place="top">
        たからばこ
     </Tooltip>
 </Playground>
