:art: Tooltipのデザイン適用

--- a/src/components/Tooltip/Tooltip.mdx
+++ b/src/components/Tooltip/Tooltip.mdx
@@ -32,7 +32,7 @@ import { Centered } from '../../doc-components/Centered'
 `Tooltip`コンポーネントでツールチップを表示するコンポーネントを囲みます。
 `label`propsに表示するテキストを渡します。
 `place`propsに表示する位置を渡します。
-`long`propsは長い文章を表示する場合にtrueを渡します。
+`id`propsにidを渡します。
 
 <Playground>
     <Tooltip label="なんと！たからばこはミミックだった！" place="top">
