--- a/src/components/Tooltip/Tooltip.mdx
+++ b/src/components/Tooltip/Tooltip.mdx
@@ -22,8 +22,10 @@ import { Centered } from '../../doc-components/Centered'
 <Playground>
     <Centered>
         <span className="pl-tooltip">
-            こんばんは
-            <span className="box top">こんにちは！</span>
+            <span className="wrap">
+                こんばんは
+                <span className="box top">こんにちは！</span>
+            </span>
         </span>
     </Centered>
 </Playground>
