--- a/src/components/Tab/Tab.mdx
+++ b/src/components/Tab/Tab.mdx
@@ -20,17 +20,17 @@ import { Tab } from './Tab'
 
 <Playground>
   <div className="pl-tab-group">
-    <a className="pl-tab pl-local-navigation is-active" href="#">
+    <a className="pl-tab is-active" href="#">
       企業概要
     </a>
-    <a className="pl-tab pl-local-navigation is-disabled" href="#">
+    <a className="pl-tab is-disabled" href="#">
       ストーリー
     </a>
-    <a className="pl-tab pl-local-navigation" href="#">
+    <a className="pl-tab" href="#">
       投資先
       <span className="pl-tab-count">87</span>
     </a>
-    <a className="pl-tab pl-local-navigation" href="#">
+    <a className="pl-tab" href="#">
       スタートアップ投資
       <span className="pl-tab-count">1,023</span>
     </a>
@@ -48,7 +48,7 @@ import { Tab } from './Tab'
     <Tab as="a" href="#">
       企業概要
     </Tab>
-    <Tab as="a" href="#">
+    <Tab as="a" href="#" disabled={true}>
       ストーリー
     </Tab>
     <Tab as="a" href="#" count={0}>
