--- a/src/components/Pagination/Pagination.mdx
+++ b/src/components/Pagination/Pagination.mdx
@@ -6,7 +6,7 @@ route: /pagination
 
 import { Playground } from "docz"
 import { Pagination } from "./Pagination"
-
+import "remixicon/fonts/remixicon.css"
 
 # Pagination
 
